RESOLVED FIXED30127
[Qt] Missing layoutTestController.dumpStatusCallbacks()
https://bugs.webkit.org/show_bug.cgi?id=30127
Summary [Qt] Missing layoutTestController.dumpStatusCallbacks()
Jakub Wieczorek
Reported 2009-10-06 06:53:45 PDT
Used in fast/dom/assign-to-window-status.html.
Attachments
patch (5.91 KB, patch)
2009-10-06 06:55 PDT, Jakub Wieczorek
no flags
patch (5.80 KB, patch)
2009-10-06 08:13 PDT, Jakub Wieczorek
no flags
Jakub Wieczorek
Comment 1 2009-10-06 06:55:43 PDT
Jakub Wieczorek
Comment 2 2009-10-06 08:13:32 PDT
Created attachment 40720 [details] patch Add const to shouldDumpStatusCallbacks().
WebKit Commit Bot
Comment 3 2009-10-06 08:35:01 PDT
Comment on attachment 40720 [details] patch Clearing flags on attachment: 40720 Committed r49189: <http://trac.webkit.org/changeset/49189>
WebKit Commit Bot
Comment 4 2009-10-06 08:35:04 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.