2009-10-06  Jakub Wieczorek  <faw217@gmail.com>

Reviewed by Simon Hausmann.

        [Qt] Implement layoutTestController.dumpStatusCallbacks() and unskip the
        fast/dom/assign-to-window-status.html test, which is passing as a result.

        https://bugs.webkit.org/show_bug.cgi?id=30127

        * platform/qt/Skipped:
2009-10-06  Jakub Wieczorek  <faw217@gmail.com>

        Reviewed by Simon Hausmann.

        [Qt] Implement layoutTestController.dumpStatusCallbacks() and unskip the
        fast/dom/assign-to-window-status.html test, which is passing as a result.

        https://bugs.webkit.org/show_bug.cgi?id=30127

        * DumpRenderTree/qt/DumpRenderTree.cpp:
        (WebCore::DumpRenderTree::DumpRenderTree):
        (WebCore::DumpRenderTree::statusBarMessage):
        * DumpRenderTree/qt/DumpRenderTree.h:
        * DumpRenderTree/qt/jsobjects.h:
        (LayoutTestController::shouldDumpStatusCallbacks):
        (LayoutTestController::dumpStatusCallbacks):

Canonical link: https://commits.webkit.org/40748@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@49189 268f45cc-cd09-0410-ab3c-d52691b4dbfc