WebKitTools/DumpRenderTree/qt/DumpRenderTree.h
@@ -88,6 +88,7 @@ public Q_SLOTS:
     void titleChanged(const QString &s);
     void connectFrame(QWebFrame *frame);
     void dumpDatabaseQuota(QWebFrame* frame, const QString& dbName);
+    void statusBarMessage(const QString& message);
 
 Q_SIGNALS:
     void quit();
